<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_delete"
          android:title="@string/menu_delete"
          android:icon="@android:drawable/ic_menu_add"></item>
    <!-- item android:id="@+id/menu_save"
          android:title="@string/menu_save"
          android:icon="@android:drawable/ic_menu_save"></item>
    <item android:id="@+id/menu_open"
          android:title="@string/menu_open"
          android:icon="@android:drawable/ic_menu_set_as"></item>
    <item android:id="@+id/menu_new"
          android:title="@string/menu_new"
          android:icon="@android:drawable/ic_menu_add"></item>
    <item android:id="@+id/menu_import"
          android:title="@string/menu_import"
          android:icon="@android:drawable/ic_menu_add"></item -->
    <item android:id="@+id/menu_export"
          android:title="@string/menu_export"
          android:icon="@android:drawable/ic_menu_add"></item>
    <item android:id="@+id/menu_sjis"
          android:title="@string/menu_sjis"
          android:checkable="true" ></item>    

</menu>