<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@drawable/black_box"
    android:gravity="fill" >

    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/button_linear"
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"    
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/new_button"
            android:text="@string/new_button_text" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/save_button"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/save_button_text" />		

        <Button
            android:id="@+id/open_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/read_button"
            android:text="@string/open_button_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/easy_memo_title"        
        android:background="@drawable/white_box"
        android:layout_marginLeft="5dp"        
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_linear"      
        android:ems="10"
        android:gravity="top"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:hint="@string/easy_memo_title_hint"
        android:inputType="text">
    	<requestFocus />
	</EditText>
    <EditText
        android:id="@+id/easy_memo"
        android:background="@drawable/white_box"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"      
        android:layout_marginBottom="10dp"      
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/easy_memo_title"
        android:gravity="top"
        android:hint="@string/easy_memo_hint"
        android:paddingLeft="15dp"
        android:paddingTop="5dp" 
        android:inputType="textMultiLine" />

</RelativeLayout>
