<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_box"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/search_Text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/white_box"
            android:onClick="searchMemo" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button" 
            android:background="@drawable/search_button"
            android:onClick="searchMemo"  />
    </LinearLayout>
	
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:layout_marginBottom="10dp"
		android:background="@drawable/memo_listview"
		
		android:focusable="true"
		>
    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memodb_empty"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>